<resources>
    <string name="app_name">TravelingApp</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="password">Password</string>
    <string name="travelApp">TravelApp</string>
    <string name="email_address">Email Address</string>
    <string name="register_for_a_new_account">Register for a new account</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="email">Email</string>
    <string name="log_out">Log Out</string>
</resources>